[tool.poetry]
name = "nagios-disk-monitoring"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[tool.poetry.scripts]
"nagios-disk-monitoring" = "nagios_disk_monitoring.__main__:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
